Posted errata on answer to problem 4.9, Sedra Smith 7e

--- a/errata/Sedra_Smith/7th/S_S_7_ER.HTM
+++ b/errata/Sedra_Smith/7th/S_S_7_ER.HTM
@@ -16,7 +16,7 @@ HREF="https://www.dordt.edu/academics/undergraduate-programs/4-year-programs/eng
               DORDT COLLEGE ENGINEERING DEPARTMENT</b></A><br><a href=
 			  "../../err.htm"
                        >TEXTBOOK ERRATA</a><br>
-                    (last update 9/19/2018)<br> 
+                    (last update 9/22/2018)<br> 
                                <br>
     <img src="Sedra_Smith_7_Cover_120x150.jpg" width="120" height="150"
                    alt="Photo of textbook"><br>
@@ -508,6 +508,13 @@ Pages 817 and 818, Bottom half of the page</b><br>
    Design</i>, 4th ed., McGraw Hill, 2010, p859.<br><br>
    
    <i>(Posted 8/17/2016)</i>                    </small></blockquote>
+                                           <A NAME="L4_4P9"></A><b>
+Appendix L, Page L-4, Answer to Problem 4.9(a).</b><br>
+   In the answer for Problem 4.9 part (a), change &quot;<i>V</i> 
+   = 1 V;&quot; to <br>&quot;<i>V</i> = &ndash;1 V;&quot; 
+   &nbsp; &nbsp; &nbsp; &nbsp; 
+   <i><small>(Posted 9/22/2018)</small></i><br><br>
+      
                                            <A NAME="L9_8P1"></A><b>
 Appendix L, Page L-9, Answer to Problem 8.1.</b><br>
    The first answer given is wrong and the second is of poor accuracy.<br>
