--- a/F18/322/322F18PS.HTM
+++ b/F18/322/322F18PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                               >(Last update: 9/22/2018 5:34 pm)
+                               >(Last update: 9/22/2018 9:02 pm)
 <!-- ------------------------------------------- ---------- -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -141,6 +141,9 @@ PS                                                           <BR>
 		<a href="https://www.ptc.com/en/products/mathcad">Mathcad</a>, 
 		etc. are recommended for making plots.       <br>&nbsp;
 		                                               <br>&nbsp;
+		Note <a href=
+		"../../errata/Sedra_Smith/7th/S_S_7_ER.HTM#L4_4P9"
+		>errata on the answer to problem 4.9</a>       <br>&nbsp;
 		Note <a href=
 		"../../errata/Sedra_Smith/7th/S_S_7_ER.HTM#P234"
 		>errata on problem 4.22</a>
