--- a/F18/322/322F18DN.HTM
+++ b/F18/322/322F18DN.HTM
@@ -141,15 +141,15 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <!--Friday    -->&nbsp;<!--start comment-->Slew rate, full-power bandwidth, ideal diodes, guestimating the state<!--end comment--></td>  
    </TR><!-- Week of 8/27------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
-	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
-	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-	  9/24<!-- --</a><!-- --><br><!-- --<a href=
+	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
+	  "https://dordt.instructure.com/files/134988021/download?download_frd=1"><!-- -->
+	  9/24<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/120977330/download?download_frd=1"><!-- -->
       9/26<!-- --</a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/121118912/download?download_frd=1"><!-- -->
       9/28<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
-      <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Monday    -->&nbsp;<!--start comment-->Diode logic, intrinsic &amp; doped Si, Shockley eq. load-line and iterative sol'n<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 8/27------------------------------------------------------------------ --><TR>
