Planned PS#6, EGR 322.  did not yet assign it.

--- a/F18/322/322F18PS.HTM
+++ b/F18/322/322F18PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                               >(Last update: 9/22/2018 9:02 pm)
+                               >(Last update: 9/24/2018 4:59 pm)
 <!-- ------------------------------------------- ---------- -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -98,10 +98,10 @@ PS                                                           <BR>
         >9/28</a><br>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics:  Various models of real diodes under    <br>&nbsp;
-		fwd and rev bias, rev breakdown.               <br>&nbsp;
+		fwd and rev bias, rev breakdown, small-signal.  <br>&nbsp;
 		Read 4.3 through 4.4.                          <br>&nbsp;
 		                                               <br>&nbsp;
-		*4.54, (more to be added later).               <br>&nbsp;
+		Do 4.48, 4.49, *4.54, 4.60, +D*4.66.              <br>&nbsp;
 		                                               <br>&nbsp;
 		One of 
 		<a href="https://www.gnu.org/software/octave/">Octave</a>, 
@@ -130,7 +130,7 @@ PS                                                           <BR>
 		fwd and rev bias, rev breakdown, Shockley model.<br>&nbsp;
 		Read 4.1 through 4.2.                          <br>&nbsp;
 		                                               <br>&nbsp;
-		<DO>+4.2, +4.3, 4.4 parts a, b, f only, +4.9, 4.18,<br>&nbsp;
+		<DO>Do +4.2, +4.3, 4.4 parts a, b, f only, +4.9, 4.18,<br>&nbsp;
 		4.22 parts a, b, c, e only.</DO>               <br>&nbsp;
 		                                               <br>&nbsp;
 		One of 
