Posted errata and linked to hw page, problem 4.66 EGR 322

--- a/errata/Sedra_Smith/7th/S_S_7_ER.HTM
+++ b/errata/Sedra_Smith/7th/S_S_7_ER.HTM
@@ -16,7 +16,7 @@ HREF="https://www.dordt.edu/academics/undergraduate-programs/4-year-programs/eng
               DORDT COLLEGE ENGINEERING DEPARTMENT</b></A><br><a href=
 			  "../../err.htm"
                        >TEXTBOOK ERRATA</a><br>
-                    (last update 9/22/2018)<br> 
+                    (last update 9/25/2018)<br> 
                                <br>
     <img src="Sedra_Smith_7_Cover_120x150.jpg" width="120" height="150"
                    alt="Photo of textbook"><br>
@@ -141,6 +141,22 @@ Page 234,  Problem 4.22 part (d)</b><br>
    (It is a duplicate of Part(b)) 
                            <small><i> &nbsp; &nbsp; &nbsp; &nbsp;
    (Posted 8/12/2016)                        </i></small><br><br>
+   
+                                           <A NAME="P240"></A><b>
+Page 240,  Problem 4.66 parts (c, d)</b><br>
+   In part (c) add the phrase, "of the nominal output voltage" so
+   that the second sentence of part (c) reads, "What is the change 
+   in <i>V<sub>O</sub></i> expressed as a percentage of the 
+   nominal output voltage, corresponding to the &plusmn;25% 
+   change in <i>V<sub>S</sub></i>?"                       <br><br>
+   
+   In part (d), again add the pharase, "of the nominal output 
+   voltage" so that the second sentence of part (d) reads, 
+   "By what percentage of the nominal output voltage does 
+   <i>V<sub>O</sub></i> change from the no-load to the full-load 
+   condition?"                                               <br>   
+                           <small><i> &nbsp; &nbsp; &nbsp; &nbsp;
+   (Posted 9/25/2018)                        </i></small><br><br>
 
                                           <A NAME="P241A"></A><b>
 Page 241,  Problem 4.77 part (c)</b><br>
@@ -514,6 +530,15 @@ Appendix L, Page L-4, Answer to Problem 4.9(a).</b><br>
    = 1 V;&quot; to <br>&quot;<i>V</i> = &ndash;1 V;&quot; 
    &nbsp; &nbsp; &nbsp; &nbsp; 
    <i><small>(Posted 9/22/2018)</small></i><br><br>
+      
+                                           <A NAME="L5_4P66"></A><b>
+Appendix L, Page L-5, Answer to Problem 4.66.</b><br>
+   There are errors of precision and other errors in the answers given.<br> 
+   Correct answers are:<br>
+   (a) 9.825 V; (b) 205.6 &Omega;; (c) 3.293%, 3.293% of 10 V;
+   (d) &ndash;6.770 &Omega;, &ndash;1.354% of 10 V; (e) 71.38 mA, 0.7370 W<br>
+   &nbsp; &nbsp; &nbsp; &nbsp; 
+   <i><small>(Posted 9/25/2018)</small></i><br><br>
       
                                            <A NAME="L9_8P1"></A><b>
 Appendix L, Page L-9, Answer to Problem 8.1.</b><br>
