--- a/F18/322/322F18PS.HTM
+++ b/F18/322/322F18PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                               >(Last update: 9/24/2018 4:59 pm)
+                               >(Last update: 9/25/201811:47 am)
 <!-- ------------------------------------------- ---------- -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -109,8 +109,14 @@ PS                                                           <BR>
 		<a href="http://fooplot.com">Fooplot</a>, 
 		<a href="https://www.desmos.com/">Desmos</a>,  <br>&nbsp;
 		<a href="https://www.ptc.com/en/products/mathcad">Mathcad</a>, 
-		etc. are recommended for making plots.
+		etc. are recommended for making plots.     <br><br>&nbsp;
 		
+		Note <a href=
+		"../../errata/Sedra_Smith/7th/S_S_7_ER.HTM#P240"
+		>errata on problem +D*4.66</a>	               <br>&nbsp;
+		Note <a href=
+		"../../errata/Sedra_Smith/7th/S_S_7_ER.HTM#L5_4P66"
+		>errata in the solution to problem +D*4.66</a>		
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
  #5
