--- a/F18/322/322F18PS.HTM
+++ b/F18/322/322F18PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                               >(Last update: 9/25/201811:47 am)
+                               >(Last update: 9/25/2018 11:56 am)
 <!-- ------------------------------------------- ---------- -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -97,20 +97,12 @@ PS                                                           <BR>
         "https://dordt.instructure.com/files/94616116/download?download_frd=1"
         >9/28</a><br>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
-        Topics:  Various models of real diodes under    <br>&nbsp;
-		fwd and rev bias, rev breakdown, small-signal.  <br>&nbsp;
+        Topics:  Various models of real diodes under   <br>&nbsp;
+		fwd and rev bias, rev breakdown, small-signal. <br>&nbsp;
 		Read 4.3 through 4.4.                          <br>&nbsp;
 		                                               <br>&nbsp;
-		Do 4.48, 4.49, *4.54, 4.60, +D*4.66.              <br>&nbsp;
+		Do 4.48, 4.49, *4.54, 4.60, +D*4.66.           <br>&nbsp;
 		                                               <br>&nbsp;
-		One of 
-		<a href="https://www.gnu.org/software/octave/">Octave</a>, 
-		<a href="https://www.mathworks.com/products/matlab.html">Matlab</a>, 
-		<a href="http://fooplot.com">Fooplot</a>, 
-		<a href="https://www.desmos.com/">Desmos</a>,  <br>&nbsp;
-		<a href="https://www.ptc.com/en/products/mathcad">Mathcad</a>, 
-		etc. are recommended for making plots.     <br><br>&nbsp;
-		
 		Note <a href=
 		"../../errata/Sedra_Smith/7th/S_S_7_ER.HTM#P240"
 		>errata on problem +D*4.66</a>	               <br>&nbsp;
