--- a/F18/322/322F18PS.HTM
+++ b/F18/322/322F18PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                               >(Last update: 9/28/2018 3:12 pm)
+                               >(Last update: 10/01/2018 2:03 pm)
 <!-- ------------------------------------------- ---------- -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -175,9 +175,9 @@ PS                                                           <BR>
         9/28
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
-		&nbsp;<!--<a href=
-        "https://dordt.instructure.com/files/94616116/download?download_frd=1"
-        >9/28</a><br>
+		<a href=
+        "https://dordt.instructure.com/files/135550216/download?download_frd=1"
+        >10/01</a><br>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics:  Ideal, models of real diodes under    <br>&nbsp;
 		fwd and rev bias, rev breakdown, Shockley model.<br>&nbsp;
