Posted Monday's slides for EGR 322

--- a/F18/322/322F18DN.HTM
+++ b/F18/322/322F18DN.HTM
@@ -154,15 +154,15 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <!--Friday    -->&nbsp;<!--start comment-->Small-signal, diodes for voltage regulation, zeners, intro rectifiers<!--end comment--></td>  
    </TR><!-- Week of 8/27------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
-	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
-	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-	  10/01<!-- --</a><!-- --><br><!-- --<a href=
+	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
+	  "https://dordt.instructure.com/files/135593641/download?download_frd=1"><!-- -->
+	  10/01<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/120977330/download?download_frd=1"><!-- -->
       10/03<!-- --</a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/121118912/download?download_frd=1"><!-- -->
       10/05<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
-      <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Monday    -->&nbsp;<!--start comment-->Rectifiers and filters, half-wave, full-wave, bridge<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment-->Test #1<!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><font color=grey>Heartland Break, no class</font><!--end comment--></td>  
    </TR><!-- Week of 8/27------------------------------------------------------------------ --><TR>
