Updated PS #6 to show which problems have solutions in App. L.  Also updated PS#7 to include some of Ch 5

--- a/F18/322/322F18PS.HTM
+++ b/F18/322/322F18PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                               >(Last update: 10/01/2018 2:03 pm)
+                               >(Last update: 10/10/2018 3:51 pm)
 <!-- ------------------------------------------- ---------- -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -99,10 +99,11 @@ PS                                                           <BR>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics:  Rectifiers, limiters, clamps, special <br>&nbsp;
 		diodes.                                        <br>&nbsp;
-		Read 4.5 through 4.7.                          <br>&nbsp;
+		Read 4.5 through 4.7, and 5.1.1 through 5.1.5. <br>&nbsp;
 		                                               <br>&nbsp;
 		Do 4.4 parts i, j, k only, 4.70, +4.71, +4.77, <br>&nbsp;
-		4.78, *4.80, *4.97 parts a, b only.            <br>&nbsp;
+		4.78, *4.80, *4.97 parts a, b only, +5.1, 5.5, <br>&nbsp;
+		+5.13, +5.17.                                  <br>&nbsp;
 		                                               <br>&nbsp;
 		Computer assistance is recommended for         <br>&nbsp;
 		problems involving rectifiers.                 <br>&nbsp;
@@ -155,7 +156,7 @@ PS                                                           <BR>
 		fwd and rev bias, rev breakdown, small-signal. <br>&nbsp;
 		Read 4.3 through 4.4.                          <br>&nbsp;
 		                                               <br>&nbsp;
-		<DO>Do 4.48, 4.49, *4.54, 4.60, +D*4.66.</DO>  <br>&nbsp;
+		<DO>Do +4.48, 4.49, *4.54, 4.60, +D*4.66.</DO>  <br>&nbsp;
 		                                               <br>&nbsp;
 		Note: Test #1 on Wednesday, 10/03.             <br>&nbsp;
 		Note <a href=
