--- a/F18/322/322F18PS.HTM
+++ b/F18/322/322F18PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                               >(Last update: 10/10/2018 3:51 pm)
+                              >(Last update: 10/12/2018 10:45 am)
 <!-- ------------------------------------------- ---------- -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -84,13 +84,13 @@ PS                                                           <BR>
    (In Sedra &amp; Smith unless otherwise noted)       </DIV></B>
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
- &nbsp;
+ 7
 
    <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
-        &nbsp;
+        10/12
 
    <!-- Due -->             </TD><TD align="center" valign="top">
-        &nbsp;
+        10/19
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
 		&nbsp;<!--<a href=
@@ -101,9 +101,9 @@ PS                                                           <BR>
 		diodes.                                        <br>&nbsp;
 		Read 4.5 through 4.7, and 5.1.1 through 5.1.5. <br>&nbsp;
 		                                               <br>&nbsp;
-		Do 4.4 parts i, j, k only, 4.70, +4.71, +4.77, <br>&nbsp;
-		4.78, *4.80, *4.97 parts a, b only, +5.1, 5.5, <br>&nbsp;
-		+5.13, +5.17.                                  <br>&nbsp;
+		<DO>Do 4.4 parts i, j, k only, 4.70, +4.71, +4.77,<br>&nbsp;
+		4.78, +*4.80, *4.97 parts a, b only, +5.1, 5.5,<br>&nbsp;
+		+5.13, +5.17.</DO>                             <br>&nbsp;
 		                                               <br>&nbsp;
 		Computer assistance is recommended for         <br>&nbsp;
 		problems involving rectifiers.                 <br>&nbsp;
@@ -145,7 +145,8 @@ PS                                                           <BR>
         9/28
 
    <!-- Due -->             </TD><TD align="center" valign="top">
-        10/12
+        <del>10/12</del><br>
+		10/15
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
 		&nbsp;<!--<a href=
@@ -164,7 +165,9 @@ PS                                                           <BR>
 		>errata on problem +D*4.66</a>	               <br>&nbsp;
 		Note <a href=
 		"../../errata/Sedra_Smith/7th/S_S_7_ER.HTM#L5_4P66"
-		>errata in the solution to problem +D*4.66</a>		
+		>errata in the solution to problem +D*4.66</a> <br>&nbsp;<small>
+		Note:  On 10/11, via e-mail notice, the due date for this<br>&nbsp;
+		assignment was changed to 10/15.</small>
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
  5
