Posted daily slides, posted PS#6 solutions

--- a/F18/322/322F18DN.HTM
+++ b/F18/322/322F18DN.HTM
@@ -176,19 +176,19 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       10/12<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->P4.48, Limiters, clampers, voltage doubler, V multiplier, special diodes <!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment-->P4.48, P4.60; Intro Ch5 (<a href="https://dordt.instructure.com/files/136010703/download?download_frd=1">pptx</a> version of intro); Structure of a MOSFET<!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Wednesday -->&nbsp;<!--start comment-->P4.48, P4.60; Intro Ch 5 (<a href="https://dordt.instructure.com/files/136010703/download?download_frd=1">pptx</a> version of intro); Structure of a MOSFET<!--end comment--><br>
+      <!--Friday    -->&nbsp;<!--start comment--><font color=grey>DDB family emergency, no class</font<!--end comment--></td>  
    </TR><!-- Week of 8/27------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
-	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
-	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-	  10/15<!-- --</a><!-- --><br><!-- --<a href=
+	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
+	  "https://dordt.instructure.com/files/136257752/download?download_frd=1"><!-- -->
+	  10/15<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/120977330/download?download_frd=1"><!-- -->
       10/17<!-- --</a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/121118912/download?download_frd=1"><!-- -->
       10/19<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
-      <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Monday    -->&nbsp;<!--start comment-->Intro Ch 5 reprise, channel formation, overdrive voltage, gate capacity<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 8/27------------------------------------------------------------------ --><TR>
