--- a/F18/322/322F18PS.HTM
+++ b/F18/322/322F18PS.HTM
@@ -149,9 +149,9 @@ PS                                                           <BR>
 		10/15
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
-		&nbsp;<!--<a href=
-        "https://dordt.instructure.com/files/94616116/download?download_frd=1"
-        >9/28</a><br>
+		<a href=
+        "https://dordt.instructure.com/files/136260426/download?download_frd=1"
+        >10/17</a><br>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics:  Various models of real diodes under   <br>&nbsp;
 		fwd and rev bias, rev breakdown, small-signal. <br>&nbsp;
