Sedra Smith 7e errata on pages 264, 292

--- a/errata/Sedra_Smith/7th/S_S_7_ER.HTM
+++ b/errata/Sedra_Smith/7th/S_S_7_ER.HTM
@@ -16,7 +16,7 @@ HREF="https://www.dordt.edu/academics/undergraduate-programs/4-year-programs/eng
               DORDT COLLEGE ENGINEERING DEPARTMENT</b></A><br><a href=
 			  "../../err.htm"
                        >TEXTBOOK ERRATA</a><br>
-                    (last update 9/25/2018)<br> 
+                    (last update 10/17/2018)<br> 
                                <br>
     <img src="Sedra_Smith_7_Cover_120x150.jpg" width="120" height="150"
                    alt="Photo of textbook"><br>
@@ -212,6 +212,20 @@ Page 241, Problem 4.79.</b><br>
    Also see below for a <a href="#P241_B">clarification of this 
    problem</a>.            <small><i> &nbsp; &nbsp; &nbsp; &nbsp;
    (Posted 8/17/2016)                        </i></small><br><br>
+
+                                           <a name="P264"></A><b>   
+Page 264, Line just above Section 5.2.</b><br>
+   Replace "Chapter 14" with "Chapter 15, Section 15.1.4"
+                        <br><small><i> &nbsp; &nbsp; &nbsp; &nbsp;
+   (Posted 10/17/2018)                        </i></small><br><br>
+
+                                           <a name="P292"></A><b>   
+Page 292, Problem D5.5 </b><br>
+   Change the last line of the problem statement from,       <br>
+   "maximum allowed voltage of 1.8 V." to,                   <br>
+   "maximum allowed <i>V<sub>GS</sub></i> of 1.8 V."         <br>
+                           <small><i> &nbsp; &nbsp; &nbsp; &nbsp;
+   (Posted 10/17/2018)                       </i></small><br><br>
 
                                            <A NAME="P374"></A><b>
 Page 374,  Equation 7.13</b><br>
