--- a/F18/322/322F18PS.HTM
+++ b/F18/322/322F18PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 10/12/2018 10:45 am)
+                              >(Last update: 10/17/2018 4:45 pm)
 <!-- ------------------------------------------- ---------- -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -117,6 +117,9 @@ PS                                                           <BR>
 		Note <a href=
 		"../../errata/Sedra_Smith/7th/S_S_7_ER.HTM#P241_A"
 		>clarification of problem 4.78</a>	           <br>&nbsp;	
+		Note <a href=
+		"../../errata/Sedra_Smith/7th/S_S_7_ER.HTM#P292"
+		>errata to problem 5.5</a>		               <br>&nbsp;
 		                                               <br>&nbsp;
 		Optional reading in the Wikipedia:             <br>&nbsp;
 		<a href="https://en.wikipedia.org/wiki/Voltage_multiplier"
