Fixed a broken link.

--- a/errata/Sedra_Smith/7th/S_S_7_ER.HTM
+++ b/errata/Sedra_Smith/7th/S_S_7_ER.HTM
@@ -232,7 +232,7 @@ Page 374,  Equation 7.13</b><br>
    The equation given is not the definition of 
    <i>A<sub>v</sub></i>.                                     <br>
    Change equation 7.13 to read as follows:                  <br>
-   <p align="center"><img src="S_S_7_ER_ERR374.GIF" 
+   <p align="center"><img src="S_S_7_ER_ERR374.gif" 
    height="64" width="275" alt="corrected equation 5.35">    </p>
                            <small><i> &nbsp; &nbsp; &nbsp &nbsp;
    (Posted 8/17/2016)                       </i></small><br><br>   
