Posted PS#8 for EGR 322

--- a/F18/322/322F18PS.HTM
+++ b/F18/322/322F18PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 10/17/2018 4:45 pm)
+                              >(Last update: 10/17/2018 7:50 pm)
 <!-- ------------------------------------------- ---------- -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -82,6 +82,36 @@ PS                                                           <BR>
                       </TD><TD align="center" valign="bottom"><B>
    Problems Assigned             <br><DIV style="font-size: 80%">
    (In Sedra &amp; Smith unless otherwise noted)       </DIV></B>
+<!-- ------------------------------------------ --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top">
+ &nbsp;
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        &nbsp;
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        &nbsp;
+        
+   <!-- Returned -->        </TD><TD align="center" valign="top">
+		&nbsp;<!--<a href=
+        "https://dordt.instructure.com/files/94616116/download?download_frd=1"
+        >9/28</a><br>
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topics: P-ch, CMOS, finite <i>r<sub>D</sub></i> in saturation <br>&nbsp;
+		MOSFET at DC (Bias analysis), 2nd-order effects.<br>&nbsp;
+		Read 5.1.6 through end of chapter.             <br>&nbsp;
+		                                               <br>&nbsp;
+		Do 5.18, 5.24, +5.31, D5.44, D5.49, +5.65.     <br>&nbsp;
+		                                               <br>&nbsp;
+		Note <a href=
+		"../../errata/Sedra_Smith/7th/S_S_7_ER.HTM#P264"
+		>errata on page 264</a>		                   <br>&nbsp;
+		Note <a href=
+		"../../errata/Sedra_Smith/7th/S_S_7_ER.HTM#P295"
+		>errata on Problem 5.24</a>		               <br>&nbsp;
+		Note <a href=
+		"../../errata/Sedra_Smith/7th/S_S_7_ER.HTM#P297"
+		>errata on Problem 5.31</a>
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
  7
