EGR 322 daily update; slides, homework PS 38 posted, newly discovered errata on 5.1

--- a/errata/Sedra_Smith/7th/S_S_7_ER.HTM
+++ b/errata/Sedra_Smith/7th/S_S_7_ER.HTM
@@ -16,7 +16,7 @@ HREF="https://www.dordt.edu/academics/undergraduate-programs/4-year-programs/eng
               DORDT COLLEGE ENGINEERING DEPARTMENT</b></A><br><a href=
 			  "../../err.htm"
                        >TEXTBOOK ERRATA</a><br>
-                    (last update 10/17/2018)<br> 
+                    (last update 10/19/2018)<br> 
                                <br>
     <img src="Sedra_Smith_7_Cover_120x150.jpg" width="120" height="150"
                    alt="Photo of textbook"><br>
@@ -547,6 +547,13 @@ Appendix L, Page L-5, Answer to Problem 4.66.</b><br>
    (d) &ndash;6.770 &Omega;, &ndash;1.354% of 10 V; (e) 71.38 mA, 0.7370 W<br>
    &nbsp; &nbsp; &nbsp; &nbsp; 
    <i><small>(Posted 9/25/2018)</small></i><br><br>
+      
+                                           <A NAME="L5_5P1"></A><b>
+Appendix L, Page L-5, Answer to Problem 5.1.</b><br>
+   Replace &quot;580 to 2900 &mu;m<sup>2</sup>&quot;<br>
+   with &quot58 to 290 &mu;m<sup>2</sup>&quot
+   &nbsp; &nbsp; &nbsp; &nbsp; 
+   <i><small>(Posted 10/19/2018)</small></i><br><br>
       
                                            <A NAME="L9_8P1"></A><b>
 Appendix L, Page L-9, Answer to Problem 8.1.</b><br>
