--- a/F18/322/322F18PS.HTM
+++ b/F18/322/322F18PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 10/17/2018 7:50 pm)
+                              >(Last update: 10/19/2018 4:36 pm)
 <!-- ------------------------------------------- ---------- -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -84,13 +84,13 @@ PS                                                           <BR>
    (In Sedra &amp; Smith unless otherwise noted)       </DIV></B>
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
- &nbsp;
+ 8
 
    <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
-        &nbsp;
+        10/19
 
    <!-- Due -->             </TD><TD align="center" valign="top">
-        &nbsp;
+        10/26
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
 		&nbsp;<!--<a href=
@@ -101,7 +101,7 @@ PS                                                           <BR>
 		MOSFET at DC (Bias analysis), 2nd-order effects.<br>&nbsp;
 		Read 5.1.6 through end of chapter.             <br>&nbsp;
 		                                               <br>&nbsp;
-		Do 5.18, 5.24, +5.31, D5.44, D5.49, +5.65.     <br>&nbsp;
+		<DO>Do 5.18, 5.24, +5.31, D5.44, D5.49, +5.65.</DO><br>&nbsp;
 		                                               <br>&nbsp;
 		Note <a href=
 		"../../errata/Sedra_Smith/7th/S_S_7_ER.HTM#P264"
@@ -147,6 +147,9 @@ PS                                                           <BR>
 		Note <a href=
 		"../../errata/Sedra_Smith/7th/S_S_7_ER.HTM#P241_A"
 		>clarification of problem 4.78</a>	           <br>&nbsp;	
+		Note <a href=
+		"../../errata/Sedra_Smith/7th/S_S_7_ER.HTM#L5_5P1"
+		>errata to answer to problem 5.1</a>	       <br>&nbsp;
 		Note <a href=
 		"../../errata/Sedra_Smith/7th/S_S_7_ER.HTM#P292"
 		>errata to problem 5.5</a>		               <br>&nbsp;
