sides for 10/22 and 10/24

--- a/F18/322/322F18DN.HTM
+++ b/F18/322/322F18DN.HTM
@@ -99,7 +99,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment--><font color=grey>Registration and advising day, no class</font><!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment-->Intro, How this course fits in engr'g, Be Coachable<!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment-->Transducers, Frequency & Spectrum<!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->Transducers, frequency & spectrum<!--end comment--></td>  
    </TR><!-- Week of 9/03------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
@@ -193,16 +193,16 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <!--Friday    -->&nbsp;<!--start comment-->Saturation mode, mode summary, p-channel, CMOS<!--end comment--></td>  
    </TR><!-- Week of 8/27------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
-	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
-	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-	  10/22<!-- --</a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/120977330/download?download_frd=1"><!-- -->
-      10/24<!-- --</a><!-- --><br><!-- --<a href=
+	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
+	  "https://dordt.instructure.com/files/136716078/download?download_frd=1"><!-- -->
+	  10/22<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/136715796/download?download_frd=1"><!-- -->
+      10/24<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/121118912/download?download_frd=1"><!-- -->
       10/26<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
-      <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Monday    -->&nbsp;<!--start comment-->Truth Prevails, symbols for MOSFETS, schematic style, tri-sat boundary eq<!--end comment--><br>
+      <!--Wednesday -->&nbsp;<!--start comment-->P5.24, MOSFET sat model, drain resistance <i>r<sub>d</sub></i>, Example 5.3, DC<!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 8/27------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
