PS#9 and solutions linked for PS#7

--- a/F18/322/322F18PS.HTM
+++ b/F18/322/322F18PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 10/19/2018 4:36 pm)
+                              >(Last update: 10/26/2018 9:46 am)
 <!-- ------------------------------------------- ---------- -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -82,6 +82,27 @@ PS                                                           <BR>
                       </TD><TD align="center" valign="bottom"><B>
    Problems Assigned             <br><DIV style="font-size: 80%">
    (In Sedra &amp; Smith unless otherwise noted)       </DIV></B>
+<!-- ------------------------------------------ --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top">
+ 9
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        10/26
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        11/02
+        
+   <!-- Returned -->        </TD><TD align="center" valign="top">
+		&nbsp;<!--<a href=
+        "https://dordt.instructure.com/files/94616116/download?download_frd=1"
+        >9/28</a><br>
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topics: P-ch, CMOS, finite <i>r<sub>D</sub></i> in saturation <br>&nbsp;
+		MOSFET at DC (Bias analysis), 2nd-order effects.<br>&nbsp;
+		Read 6.1, 6.2                                  <br>&nbsp;
+		                                               <br>&nbsp;
+		<DO>Do                                         <br>&nbsp;
+		6.1, +6.2, +6.8, 6.9, +6.10, +6.12, +6.28, 6.29.</DO>		
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
  8
@@ -123,9 +144,9 @@ PS                                                           <BR>
         10/19
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
-		&nbsp;<!--<a href=
-        "https://dordt.instructure.com/files/94616116/download?download_frd=1"
-        >9/28</a><br>
+		&nbsp;<a href=
+        "https://dordt.instructure.com/files/136840987/download?download_frd=1"
+        >10/25</a><br>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics:  Rectifiers, limiters, clamps, special <br>&nbsp;
 		diodes.                                        <br>&nbsp;
