Adding "selected blogs and devotionals" to my online CV

--- a/CV.HTM
+++ b/CV.HTM
@@ -706,13 +706,47 @@
         <BR></DIV>
     </TD>
 </TR>
+<TR>
+    <TD WIDTH="570" COLSPAN="3">
+        <BR><H1>Selected Blogs and Devotionals</H1>
+    </TD>
+</TR>
+
+<TR>
+    <TD WIDTH="50">
+        &nbsp;
+    </TD>
+
+    <TD WIDTH="520" COLSPAN="2"><DIV>
+        <P>D.F. De Boer, "<a href= 
+		"https://inallthings.org/truth-prevails/"
+        >Truth Prevails</a>," <i>In All Things</i>, September 26, 2017.
+		
+        <P>D.F. De Boer, "<a href= 
+		"https://inallthings.org/the-announcement-of-the-ten-commandments/"
+        >The Announcement of the Ten Commandments</a>," <br>
+		<i>In All Things</i>, June 2, 2017.
+		
+        <P>D.F. De Boer, "<a href= 
+		"https://inallthings.org/anticipating-advent/"
+        >Anticipating Advent</a>," <i>In All Things</i>, December 1, 2016.
+		
+        <P>D.F. De Boer, "<a href= 
+		"https://inallthings.org/technology-is-imagination-incarnated/"
+        >Technology is Imagination Incarnated</a>," <i>In All Things</i>, 
+		<br>June 10, 2015.
+		
+		
+		</P><BR></DIV>
+    </TD>
+</TR>
 
 <TR>
     <TD WIDTH="570" COLSPAN="3"><DIV>
         <HR>
         <A HREF = "INDEX.HTM">Back to De Boer's home page</A><BR><BR>
 
-         (This page last updated on 1/04/2018)</DIV>
+         (This page last updated on 10/26/2018)</DIV>
     </TD>
 </TR>
 
