fixed typeos on my homepage, EGR 322 daily slide update and posted PS#10

--- a/F18/322/322F18DN.HTM
+++ b/F18/322/322F18DN.HTM
@@ -210,13 +210,13 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  "https://dordt.instructure.com/files/136977668/download?download_frd=1"><!-- -->
 	  10/29<!-- --></a><!-- --><br><!-- --><a href=
       "https://dordt.instructure.com/files/137098611/download?download_frd=1"><!-- -->
-      10/31<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/121118912/download?download_frd=1"><!-- -->
-      11/02<!-- --</a><!-- --></td>
+      10/31<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/137196342/download?download_frd=1"><!-- -->
+      11/02<!-- --></a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Structure of a BJT; OFF, ACTIVE, SAT regions; large-signal models <!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment-->P6.1, 6.28d, SAT region &amp; models, CE char. curves, Early effect<!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->Career Paths, Examples of DC biased transistors.<!--end comment--></td>  
    </TR><!-- Week of 8/27------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
