--- a/F18/322/322F18PS.HTM
+++ b/F18/322/322F18PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 10/26/2018 9:46 am)
+                              >(Last update: 11/02/2018 3:34 pm)
 <!-- ------------------------------------------- ---------- -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -82,6 +82,29 @@ PS                                                           <BR>
                       </TD><TD align="center" valign="bottom"><B>
    Problems Assigned             <br><DIV style="font-size: 80%">
    (In Sedra &amp; Smith unless otherwise noted)       </DIV></B>
+<!-- ------------------------------------------ --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top">
+10
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        11/02
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        11/09
+        
+   <!-- Returned -->        </TD><TD align="center" valign="top">
+		&nbsp;<!--<a href=
+        "https://dordt.instructure.com/files/94616116/download?download_frd=1"
+        >9/28</a><br>
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topic: BJT DC circuits, secondary effects      <br>&nbsp;
+		Read: 6.3, 6.4                                 <br>&nbsp;
+		                                               <br>&nbsp;
+		<DO>Do +6.58, +6.61, +**6.63, D6.64, +*6.68, **6.69</DO><br>&nbsp;
+		                                               <br>&nbsp;
+		Note <a href=
+		"../../errata/Sedra_Smith/7th/S_S_7_ER.HTM#363"
+		>clarification of Problem D6.64.</a>													   
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
  9
