--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ Contents of this page: &nbsp; &nbsp; &nbsp &nbsp; &nbsp; &nbsp; &nbsp;
 	 <small>&nbsp;&nbsp;&nbsp;(I like the telephone. Call 
         all you want.  It is very convenient for both of us.)</small><br><br>
         
-     Before traveling (or walking) to visit me at my office, it is wise to call on the telphone and see if I'm in.  If I do not answer my office phone you may try my home phone or leave a message at my office phone.  If you are planning a few hours or more in advance, send e-mail to set up an appointment for a time that is mutually convenient.  I set up appointments outside of office hours frequently.<br><br>
+     Before traveling (or walking) to visit me at my office, it is wise to call on the telephone and see if I'm in.  If I do not answer my office phone you may try my home phone or leave a message at my office phone.  If you are planning a few hours or more in advance, send e-mail to set up an appointment for a time that is mutually convenient.  I set up appointments outside of office hours frequently.<br><br>
 	 
      Students also have permission to telephone me at home or office any day except Sunday between 8 AM and 10 PM (Sunday is OK too if if the call is not about course work).  My office  phone number is 712-722-6245.  My home phone number is 
      712-<IMG SRC=home_ph.gif ALIGN="ABSBOTTOM">.<br><br>
@@ -389,8 +389,8 @@ An archive of the blog site was saved but the site was not put back up. No plan 
 	</div></td>
 	<td style="vertical-align: bottom"><div>
 	    De Boer's <A HREF = "Texts.htm"
-	    >Texbook Requisitions</A> including ISBN numbers for 
-	    up-comming courses.
+	    >Textbook Requisitions</A> including ISBN numbers for 
+	    up-coming courses.
     </div></td>
 </tr>
 <!--Textbook Errata-->
