EGR 322 daily slide update and hw solutions posted for PS#8 and PS#9

--- a/F18/322/322F18DN.HTM
+++ b/F18/322/322F18DN.HTM
@@ -136,7 +136,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       "https://dordt.instructure.com/files/134864325/download?download_frd=1"><!-- -->
       9/21<!-- --></a><!-- --></td>
       <TD align="left" valign="bottom">
-      <!--Monday    -->&nbsp;<!--start comment-->P2.92, Miller Integrator, differeniator, offset voltage error<!--end comment--><br>
+      <!--Monday    -->&nbsp;<!--start comment-->P2.92, Miller Integrator, differentiator, offset voltage error<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment-->P2.92 again, Input bias currents, Input bias current offset<!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment-->Slew rate, full-power bandwidth, ideal diodes, guestimating the state<!--end comment--></td>  
    </TR><!-- Week of 9/24------------------------------------------------------------------ --><TR>
@@ -204,7 +204,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <!--Monday    -->&nbsp;<!--start comment-->Truth Prevails, symbols for MOSFETS, schematic style, tri-sat boundary eq<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment-->P5.24, MOSFET sat model, drain resistance <i>r<sub>d</sub></i>, Example 5.3, DC calcs<!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment-->Body, temp effects, subthr leak, brkdown, punch thru, zap, depl, <b>Ch 6</b> intro<!--end comment--></td>  
-   </TR><!-- Week of 8/27------------------------------------------------------------------ --><TR>
+   </TR><!-- Week of 10/29------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/136977668/download?download_frd=1"><!-- -->
@@ -217,17 +217,17 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <!--Monday    -->&nbsp;<!--start comment-->Structure of a BJT; OFF, ACTIVE, SAT regions; large-signal models <!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment-->P6.1, 6.28d, SAT region &amp; models, CE char. curves, Early effect<!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment-->Career Paths, Examples of DC biased transistors.<!--end comment--></td>  
-   </TR><!-- Week of 8/27------------------------------------------------------------------ --><TR>
+   </TR><!-- Week of 11/05------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
-	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
-	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-	  11/05<!-- --</a><!-- --><br><!-- --<a href=
+	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
+	  "https://dordt.instructure.com/files/137303517/download?download_frd=1"><!-- -->
+	  11/05<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/120977330/download?download_frd=1"><!-- -->
       11/07<!-- --</a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/121118912/download?download_frd=1"><!-- -->
       11/09<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
-      <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Monday    -->&nbsp;<!--start comment-->CBJ breakdown, EBJ breakdown, temperature & &beta;, <b>Ch 7</b> intro., bias<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 8/27------------------------------------------------------------------ --><TR>
