--- a/F18/322/322F18PS.HTM
+++ b/F18/322/322F18PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 11/02/2018 3:34 pm)
+                              >(Last update: 11/05/2018 3:04 pm)
 <!-- ------------------------------------------- ---------- -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -116,9 +116,9 @@ PS                                                           <BR>
         11/02
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
-		&nbsp;<!--<a href=
-        "https://dordt.instructure.com/files/94616116/download?download_frd=1"
-        >9/28</a><br>
+		<a href=
+        "https://dordt.instructure.com/files/137303597/download?download_frd=1"
+        >11/05</a><br>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics: P-ch, CMOS, finite <i>r<sub>D</sub></i> in saturation <br>&nbsp;
 		MOSFET at DC (Bias analysis), 2nd-order effects.<br>&nbsp;
@@ -137,9 +137,9 @@ PS                                                           <BR>
         10/26
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
-		&nbsp;<!--<a href=
-        "https://dordt.instructure.com/files/94616116/download?download_frd=1"
-        >9/28</a><br>
+		<a href=
+        "https://dordt.instructure.com/files/137196859/download?download_frd=1"
+        >10/29</a><br>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics: P-ch, CMOS, finite <i>r<sub>D</sub></i> in saturation <br>&nbsp;
 		MOSFET at DC (Bias analysis), 2nd-order effects.<br>&nbsp;
@@ -169,7 +169,7 @@ PS                                                           <BR>
    <!-- Returned -->        </TD><TD align="center" valign="top">
 		&nbsp;<a href=
         "https://dordt.instructure.com/files/136840987/download?download_frd=1"
-        >10/25</a><br>
+        >10/24</a><br>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics:  Rectifiers, limiters, clamps, special <br>&nbsp;
 		diodes.                                        <br>&nbsp;
