Posted erratta for Alexander & Sadiku, page 640.

--- a/errata/Alexander_Sadiku/6th/A_S_6_ER.HTM
+++ b/errata/Alexander_Sadiku/6th/A_S_6_ER.HTM
@@ -48,7 +48,7 @@
            DORDT COLLEGE ENGINEERING DEPARTMENT</a><br> 
 <a href="../../../ERRATA/err.htm"> 
                        TEXTBOOK ERRATA</a><br>
-                    (last update 8/27/2018)<br>
+                    (last update 11/05/2018)<br>
                                <br>
    <img src="A_S_6th_Cover_120x154.jpg" width="120" height="154"
                     alt="textbook cover"><br>
@@ -1100,6 +1100,16 @@ Pages 606, 607.  Problem 13.73 and Figure 13.135</b><br><span class=comment>
    the textbook.          <br><small><i> &nbsp; &nbsp; &nbsp; &nbsp;
        (Posted 4/26/2017, updated 4/19/2018)</i></small></span><br><br>
    
+                                           <A NAME=ERR_640></A><b> 
+Page 649.  Example 14.11, final answer</b><br><span class=comment>
+   The unit on the final answer should be &mu;F, not &pi;F.   <br>
+   Change the answer from &quot;</span>2.653 &pi;F<span class=comment>&quot; 
+   to &quot;<ins>2.653 &mu;F.</ins>&quot;. 
+                       <br><small><i> &nbsp; &nbsp; &nbsp; &nbsp;
+       (Posted 11/05/2018, courtesy of e-mail from B. Dowling)
+   <!--This erratum does not appear in earlier editions. -->
+	                                  </i></small></span><br><br>
+    
    
 <!--
                                           <A NAME=ERR_636></A><b>
