--- a/F18/322/322F18DN.HTM
+++ b/F18/322/322F18DN.HTM
@@ -221,14 +221,14 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/137303517/download?download_frd=1"><!-- -->
-	  11/05<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/120977330/download?download_frd=1"><!-- -->
-      11/07<!-- --</a><!-- --><br><!-- --<a href=
+	  11/05<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/137432535/download?download_frd=1"><!-- -->
+      11/07<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/121118912/download?download_frd=1"><!-- -->
       11/09<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->CBJ breakdown, EBJ breakdown, temperature & &beta;, <b>Ch 7</b> intro., bias<!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Wednesday -->&nbsp;<!--start comment-->Problems 6.63, 6.68, 6.69 (No new topics were presented.)<!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 8/27------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
