Posted Sedra & Smith erratum on answer to problem 6.58

--- a/errata/Sedra_Smith/7th/S_S_7_ER.HTM
+++ b/errata/Sedra_Smith/7th/S_S_7_ER.HTM
@@ -16,7 +16,7 @@ HREF="https://www.dordt.edu/academics/undergraduate-programs/4-year-programs/eng
               DORDT COLLEGE ENGINEERING DEPARTMENT</b></A><br><a href=
 			  "../../err.htm"
                        >TEXTBOOK ERRATA</a><br>
-                    (last update 10/19/2018)<br> 
+                    (last update 11/07/2018)<br> 
                                <br>
     <img src="Sedra_Smith_7_Cover_120x150.jpg" width="120" height="150"
                    alt="Photo of textbook"><br>
@@ -555,6 +555,13 @@ Appendix L, Page L-5, Answer to Problem 5.1.</b><br>
    &nbsp; &nbsp; &nbsp; &nbsp; 
    <i><small>(Posted 10/19/2018)</small></i><br><br>
       
+                                           <A NAME="L7_6P58"></A><b>
+Appendix L, Page L-7, Answer to Problem 6.58.</b><br>
+   There are rounding errors.  More accurate annswers are<br>
+   +0.42 V, +1.12 V, &ndash;1.16 V; +1.2 V, +1.9 V, -1.9 V, 206<br>
+   &nbsp; &nbsp; &nbsp; &nbsp; 
+   <i><small>(Posted 11/07/2018)</small></i><br><br>
+            
                                            <A NAME="L9_8P1"></A><b>
 Appendix L, Page L-9, Answer to Problem 8.1.</b><br>
    The first answer given is wrong and the second is of poor accuracy.<br>
