--- a/F18/322/322F18PS.HTM
+++ b/F18/322/322F18PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 11/07/2018 5:55 pm)
+                              >(Last update: 11/08/2018 11:38 am)
 <!-- ------------------------------------------- ---------- -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -102,6 +102,7 @@ PS                                                           <BR>
 		                                               <br>&nbsp;
 		<DO>Do +6.58, +6.61, +**6.63, D6.64, +*6.68, **6.69</DO><br>&nbsp;
 		                                               <br>&nbsp;
+		Note 6.61 continues with part (e) on page 363. <br>&nbsp;
 		Note <a href=
 		"../../errata/Sedra_Smith/7th/S_S_7_ER.HTM#L7_6P58"
 		>roundoff errors in text's answer to 6.58.</a><br>&nbsp;											   
