--- a/F18/322/322F18PS.HTM
+++ b/F18/322/322F18PS.HTM
@@ -102,6 +102,8 @@ PS                                                           <BR>
 		                                               <br>&nbsp;
 		<DO>Do +6.58, +6.61, +**6.63, D6.64, +*6.68, **6.69</DO><br>&nbsp;
 		                                               <br>&nbsp;
+		<!-- Note the authors generally use |VBE|=0.7 V, but in
+		a few cases the solutions in Appendix L use 0.6 or 0.65 V -->
 		Note 6.61 continues with part (e) on page 363. <br>&nbsp;
 		Note <a href=
 		"../../errata/Sedra_Smith/7th/S_S_7_ER.HTM#L7_6P58"
